<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/top_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66000000"
    android:orientation="vertical">

    <!-- <LinearLayout -->
    <!-- android:layout_width="match_parent" -->
    <!-- android:layout_height="match_parent" -->
    <!-- android:alpha="0.3" -->
    <!-- android:background="#130c0e" /> -->
    <!--     这祸害？ -->

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/tablet_top"
            android:orientation="horizontal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/top"
            android:layout_gravity="center_vertical"
            android:background="#dff2f9"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="#dff2f9"
                android:fadeScrollbars="false">

                <LinearLayout
                    android:id="@+id/tools"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_clear_all"
                        style="@style/TabletSaveBtnStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:gravity="center"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/tablet_clear" />

                    <Button
                        android:id="@+id/btn_rem"
                        style="@style/TabletSaveBtnStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:gravity="center"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/tablet_rem" />

                    <Button
                        android:id="@+id/btn_undo"
                        style="@style/TabletSaveBtnStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:gravity="center"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/tablet_undo" />

                    <Button
                        android:id="@+id/btn_redo"
                        style="@style/TabletSaveBtnStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:gravity="center"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/tablet_redo" />

                    <Button
                        android:id="@+id/btn_eraser"
                        style="@style/EraserBTStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/tablet_save_btn_false"
                        android:gravity="center"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/tablet_eraser" />

                    <Button
                        android:id="@+id/pre_page"
                        style="@style/TabletSaveBtnStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:enabled="false"
                        android:gravity="center"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/tablet_pre" />

                    <Button
                        android:id="@+id/next_page"
                        style="@style/TabletSaveBtnStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:gravity="center"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/tablet_next" />

                    <Button
                        android:id="@+id/btn_save"
                        style="@style/TabletSaveBtnStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:gravity="center"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/tablet_save" />

                    <ImageView
                        android:id="@+id/btn_exit"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/tablet_exit_btn" />
                </LinearLayout>
            </HorizontalScrollView>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c6dae1"
            android:orientation="horizontal" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/tab_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <com.rj.view.MyTabletShowView
            android:id="@+id/showview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.rj.view.MyTabletView
                android:id="@+id/mytabletview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/page_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
        </RelativeLayout>
    </FrameLayout>

</LinearLayout>